# taxglide

./: .gitignore  BUILD.md  README.md  WARP.md  analyze_utilization.py  build.bat  build_executable.ps1  collect_files.py  example_married_joint.md  main.py  pyproject.toml  restore_sg.json  run_tests.py  upload-release.ps1
.github/workflows/: release.yml
configs/2025/: federal.yaml  federal_married.yaml  multipliers.yaml  stgallen.yaml
docs/: cli-gui-contract.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  CliTester.tsx  TauriTest.tsx  theme.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: cli_integration.rs  cli_types.rs  lib.rs  main.rs  tauri_commands.rs
gui/src/components/: AppShell.tsx  CantonManager.tsx  DataTable.tsx  ErrorBoundary.tsx  (+6 more)
taxglide/: cli.py
taxglide/config/: manager.py
taxglide/engine/: __init__.py  federal.py  models.py  multipliers.py  optimize.py  rounding.py  stgallen.py
taxglide/io/: loader.py
taxglide/viz/: curve.py
tests/: README_OPTIMIZATION_TESTS.md  __init__.py  conftest.py  test_calculation.py  test_cli_income_parameters.py  test_config_validation.py  test_edge_case_fixes.py  test_examples.py  test_income_range_validation.py  test_married_filing.py  test_optimization.py  test_optimization_comprehensive.py  test_optimization_regression_34k.py  validate_income_custom.py  validate_income_range.py  validate_optimization_comprehensive.py  validate_optimization_enhanced.py  validate_optimization_loop.py  validate_optimization_range.py
(+13 files in other folders)
